--- a/Code/HTML/Informatik/index.html
+++ b/Code/HTML/Informatik/index.html
@@ -1,12 +1,42 @@
-<!DOCTYPW html>
-<html lang="de">
-    <head>
-        <meta charset="utf-8" 
-    <title> Jonahs Website </title>
-    </head>
-    <body>
-        <h1> Hello world </h1>
-        <h2> test </h2>
-        <a href=https://google.de> hey google </a>
-    </body> 
+<!DOCTYPE html>
+<html class="client-nojs" lang="de" dir="ltr">
+<head>
+<meta charset="UTF-8"/>
+<title>Joseph Weizenbaum – Wikipedia</title>
+</head>
+		<main id="content" class="mw-body">
+			<div class="banner-container">
+			<div id="siteNotice"></div>
+			</div>
+			<div class="pre-content heading-holder">
+				<div class="page-heading">
+					<h1 id="section_0">Joseph Weizenbaum</h1>
+				</div>
+			</div>
+			<div id="bodyContent" class="content">
+				<div id="mw-content-text" class="mw-body-content mw-content-ltr" lang="de" dir="ltr"><div class="mw-parser-output"><section class="mf-section-0" id="mf-section-0"><p><b>Joseph Weizenbaum</b> (* <a href="/wiki/8._Januar" title="8. Januar">8. Januar</a> <a href="/wiki/1923" title="1923">1923</a> in <a href="/wiki/Berlin" title="Berlin">Berlin</a>; † <a href="/wiki/5._M%C3%A4rz" title="5. März">5. März</a> <a href="/wiki/2008" title="2008">2008</a> in <a href="/wiki/Gr%C3%B6ben_(Ludwigsfelde)" title="Gröben (Ludwigsfelde)">Gröben</a>) war ein <a href="/wiki/Deutschland" title="Deutschland">deutsch</a>-<a href="/wiki/Vereinigte_Staaten" title="Vereinigte Staaten">US-amerikanischer</a> <a href="/wiki/Informatik" title="Informatik">Informatiker</a> sowie Wissenschafts- und <a href="/wiki/Gesellschaftskritik" title="Gesellschaftskritik">Gesellschaftskritiker</a>. Weizenbaum bezeichnete sich selbst als <a href="/wiki/Dissident" title="Dissident">Dissidenten</a> und <a href="/wiki/Ketzer" title="Ketzer">Ketzer</a> der Informatik.</p><div class="thumb tright"><div class="thumbinner" style="width:222px;"><img alt="" src="//upload.wikimedia.org/wikipedia/commons/thumb/1/17/Joseph_Weizenbaum.jpg/220px-Joseph_Weizenbaum.jpg" width="220" height="236"></a><div class="thumbcaption">Joseph Weizenbaum, 2005 in Berlin</div></div></div>
+
+<div id="toc" class="toc" role="navigation" aria-labelledby="mw-toc-heading"><input type="checkbox" role="button" id="toctogglecheckbox" class="toctogglecheckbox" style="display:none"><div class="toctitle" lang="de" dir="ltr"><h2 id="mw-toc-heading">Inhaltsverzeichnis</h2><span class="toctogglespan"><label class="toctogglelabel" for="toctogglecheckbox"></label></span></div>
+<ul><li class="toclevel-1 tocsection-1"><a href="#Leben"><span class="tocnumber">1</span> <span class="toctext">Leben</span></a></li>
+<li class="toclevel-1 tocsection-2"><a href="#Ehrungen"><span class="tocnumber">2</span> <span class="toctext">Ehrungen</span></a></li>
+</ul></div>
+
+</section><h2 class="section-heading" onclick="mfTempOpenSection(1)"><div class="mw-ui-icon mw-ui-icon-element indicator mw-ui-icon-small mw-ui-icon-flush-left"></div><span class="mw-headline" id="Leben">Leben</span></h2><section class="mf-section-1 collapsible-block" id="mf-section-1">
+<p>Weizenbaum war der Sohn des <a href="/wiki/K%C3%BCrschner" title="Kürschner">Kürschnermeisters</a> Jechiel Weizenbaum und dessen Frau Henriette. Einer seiner Brüder war der Informatiker Heinrich Weizenbaum (1921–2005), der sich anlässlich seiner Einbürgerung in den USA in <a href="/wiki/Henry_F._Sherwood" title="Henry F. Sherwood">Henry F. Sherwood</a> umbenannte. Joseph Weizenbaum besuchte das Luisenstädtische Realgymnasium in Berlin, wurde aber Mitte der 1930er Jahre auf die jüdische Knabenschule verwiesen. Die jüdische Familie emigrierte 1936 von Bremen aus in die <a href="/wiki/Vereinigte_Staaten" title="Vereinigte Staaten">USA</a>. Dort studierte Weizenbaum ab 1941 zunächst <a href="/wiki/Mathematik" title="Mathematik">Mathematik</a> an der <a href="/wiki/Wayne_State_University" title="Wayne State University">Wayne State University</a> in <a href="/wiki/Detroit" title="Detroit">Detroit</a>, Michigan. Das Studium unterbrach er 1942 aufgrund seines Dienstes in der meteorologischen Abteilung der <a href="/wiki/United_States_Army_Air_Forces" title="United States Army Air Forces">United States Army Air Forces</a> im <a href="/wiki/Zweiter_Weltkrieg" title="Zweiter Weltkrieg">Zweiten Weltkrieg</a>.
+</p><p>1946 nahm er sein Studium wieder auf und schloss es 1950 mit dem <a href="/wiki/Master" title="Master">Master</a> ab. Danach wurde er an der Fakultät für Mathematik wissenschaftlicher Assistent beim Entwurf, Bau und Betrieb eines <a href="/wiki/Gro%C3%9Frechner" title="Großrechner">Großrechners</a>. Von 1952 bis 1963 arbeitete Weizenbaum als <a href="/wiki/Systemingenieur" title="Systemingenieur">Systemingenieur</a> im <i>Computer Development Laboratory</i> der <a href="/wiki/General_Electric" title="General Electric">General Electric Corporation</a> und war dort an der Konzeption des ersten Computer-Banksystems beteiligt. 1963 begann er seine Tätigkeit am <a href="/wiki/Massachusetts_Institute_of_Technology" title="Massachusetts Institute of Technology">Massachusetts Institute of Technology</a> (MIT), zunächst als <a href="/wiki/Professor#Professuren_in_anglo-amerikanischen_L%C3%A4ndern" title="Professor"><i>Associate Professor</i></a> und ab 1970 als Professor für <i>Computer Science</i>. Er arbeitete in der zweiten Hälfte der 1960er-Jahre am Aufbau des Arpanet, einem Vorläufer des Internets.</p><p>1966 veröffentlichte Weizenbaum das Computer-Programm <a href="/wiki/ELIZA" title="ELIZA">ELIZA</a>, mit dem er die Verarbeitung natürlicher Sprache durch einen Computer demonstrieren wollte. <i>Eliza</i> wurde als Meilenstein der „<a href="/wiki/K%C3%BCnstliche_Intelligenz" title="Künstliche Intelligenz">künstlichen Intelligenz</a>“ gefeiert, seine Variante <i>Doctor</i> simulierte das Gespräch mit einem <a href="/wiki/Psychologe" title="Psychologe">Psychologen</a>. Es schien den <a href="/wiki/Turing-Test" title="Turing-Test">Turing-Test</a> zu bestehen, da viele Benutzer nicht merkten, dass sie mit einer Maschine kommunizierten. Weizenbaum war entsetzt, wie ernst viele Menschen dieses relativ einfache Programm nahmen, indem sie im Dialog intimste Details von sich preisgaben. Dabei war das Programm nie darauf hin konzipiert, einen menschlichen <a href="/wiki/Psychotherapeut" title="Psychotherapeut">Therapeuten</a> zu ersetzen. Durch dieses Schlüsselerlebnis wurde Weizenbaum zum Kritiker der gedankenlosen Computergläubigkeit. Heute gilt <i>Eliza</i> als Prototyp für moderne <a href="/wiki/Chatbot" title="Chatbot">Chatbots</a>.
+</p><p>Seit dieser Zeit mahnte Weizenbaum den kritischen Umgang mit Computern und die Verantwortung des Wissenschaftlers für sein Tun an. Besonders betonte er, die eigentliche Entscheidungsgewalt müsse immer in menschlicher Hand bleiben, auch wenn künstliche intelligente Systeme als Hilfsmittel zur Informationsbeschaffung herangezogen werden. Er war Mitbegründer der <i>Computer Professionals for Social Responsibility</i> in den USA, Mitgründer und später Beirat des <a href="/wiki/Forum_InformatikerInnen_f%C3%BCr_Frieden_und_gesellschaftliche_Verantwortung" title="Forum InformatikerInnen für Frieden und gesellschaftliche Verantwortung">Forum InformatikerInnen für Frieden und gesellschaftliche Verantwortung</a> in Deutschland und Vorsitzender des Wissenschaftlichen Rates am <i>Institute of Electronic Business</i> in Berlin. So arbeitete er auch mit Informatikern der <a href="/wiki/Universit%C3%A4t_Bremen" title="Universität Bremen">Universität Bremen</a> zusammen und hielt dort Gastvorlesungen. Während seiner Zeit am MIT verweigerte Weizenbaum die Mitarbeit an der Entwicklung von Waffen und Waffensystemen für den <a href="/wiki/Vietnamkrieg" title="Vietnamkrieg">Vietnamkrieg</a>, engagierte sich als kritischer Aufklärer und beteiligte sich an Demonstrationen.
+</p><p>Ab 1996 lebte Weizenbaum wieder in <a href="/wiki/Berlin-Mitte" title="Berlin-Mitte">Berlin-Mitte</a>, in der Nähe einer seiner Töchter, unweit der ehemaligen elterlichen Wohnung. Mit seiner Ehefrau Ruth hatte er vier Töchter.
+</p>
+
+<p>Weizenbaum starb 2008 im Alter von 85 Jahren an den Folgen eines <a href="/wiki/Schlaganfall" title="Schlaganfall">Schlaganfalls</a>, nachdem er schon im Jahr 2007 an <a href="/wiki/Krebs_(Medizin)" title="Krebs (Medizin)">Krebs</a> erkrankt war, der erfolglos <a href="/wiki/Chemotherapie" title="Chemotherapie">chemotherapeutisch</a> behandelt wurde. Er wurde auf dem <a href="/wiki/J%C3%BCdischer_Friedhof_Berlin-Wei%C3%9Fensee" title="Jüdischer Friedhof Berlin-Weißensee">Jüdischen Friedhof Berlin-Weißensee</a> begraben.</p>
+</section><h2 class="section-heading" onclick="mfTempOpenSection(2)"><div class="mw-ui-icon mw-ui-icon-element indicator mw-ui-icon-small mw-ui-icon-flush-left"></div><span class="mw-headline" id="Ehrungen">Ehrungen</span></h2><section class="mf-section-2 collapsible-block" id="mf-section-2">
+<ul><li>2001: Großes <a href="/wiki/Bundesverdienstkreuz" class="mw-redirect" title="Bundesverdienstkreuz">Bundesverdienstkreuz</a></li>
+<li>2002: <a href="/wiki/Gesellschaft_f%C3%BCr_Informatik" title="Gesellschaft für Informatik">Gesellschaft für Informatik</a> – Ehrenmitgliedschaft.</li>
+<li>Ehrendoktor der <a href="/wiki/Universit%C3%A4t_Hamburg" title="Universität Hamburg">Universität Hamburg</a>, der <a href="/wiki/Universit%C3%A4t_Bremen" title="Universität Bremen">Universität Bremen</a> sowie <i>Doctor of Humane Literature</i> vom Webster College (USA)</li>
+<li><i><a href="/wiki/Norbert_Wiener" title="Norbert Wiener">Norbert Wiener</a> Prize</i> der <i>Computer Professionals for Social Responsibility</i></li>
+<li>Preis „Lebensleistung“ vom <a href="/wiki/Forum_InformatikerInnen_f%C3%BCr_Frieden_und_gesellschaftliche_Verantwortung" title="Forum InformatikerInnen für Frieden und gesellschaftliche Verantwortung">Forum InformatikerInnen für Frieden und gesellschaftliche Verantwortung</a></li>
+<li>2017: Namenspatenschaft für das <i>Weizenbaum-Institut für die vernetzte Gesellschaft („<a href="/wiki/Deutsches_Internet-Institut" class="mw-redirect" title="Deutsches Internet-Institut">Deutsches Internet-Institut</a>“)</i></li>
+<li>Das FIfF stiftet den Weizenbaum-Preis und den Weizenbaum-Studienpreis in Erinnerung an den Wissenschaftler und Informatik-Pionier.</li>
+<li>2018 nahm <a href="/wiki/Thomas_Kerstan" title="Thomas Kerstan">Thomas Kerstan</a> das Buch <i>Die Macht der Computer und die Ohnmacht der Vernunft</i> (1976) in seinen <i>Kanon für das 21. Jahrhundert</i> auf, eine Auswahl von Werken, die seines Erachtens "jeder kennen sollte".<
+</body>
 </html>
