--- a/Code/HTML/Informatik/index.html
+++ b/Code/HTML/Informatik/index.html
@@ -2,7 +2,7 @@
 <html class="client-nojs" lang="de" dir="ltr">
 <head>
 <meta charset="UTF-8"/>
-<title>Joseph Weizenbaum – Wikipedia</title>
+<title>Joseph Weizenbaum</title>
 </head>
 		<main id="content" class="mw-body">
 			<div class="banner-container">
